@@ -1,3 +1,7 @@
+UNRELEASED, S3QL master
+
+  * Fixed a sporadic test failure in t5_cache.py.
+
 2018-11-06, S3QL 2.32
 
   * Fixed a potential bug in s3qlrm that would probably lead to a
